# traffic_simulator

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
public/sprites/: spritesheet.json
scripts/: generate-sprites.ts  palette.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/entities/: Entity.ts
src/game/: GameLoop.ts  GameState.ts
src/scene/: Buildings.ts  Road.ts  SceneBuilder.ts
src/systems/: Lighting.ts  Movement.ts  QFrontScreen.ts  Spawner.ts  TrafficLight.ts
